# xq-notification-rs

./: .gitignore  Cargo.toml  README.md
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
src/: lib.rs  notification.rs
