[package]
name = "xq_notification"
version = "0.0.1"
edition = "2021"
authors = ["Sinking <1034439685@qq.com>"]
license = "MIT"
description = "通知的封装"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uuid = { version = "^0.8", features = ["v4"] }

lazy_static = { version = "^1.4" }

serde_json = "^1.0"

log = "^0.4"

[workspace]

members = [
    "examples/hello"
]
